[project]
name = "pewterfelt-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13"
dependencies = [
    "beautifulsoup4==4.13.3",
    "crawl4ai==0.5.0.post2",
    "fastapi[standard]==0.115.11",
    "python-dotenv==1.0.1",
    "uvicorn==0.34.0",
]

[tool.basedpyright]
reportMissingTypeStubs = false
reportCallInDefaultInitializer = false
