[project]
name = "pewterfelt-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.3"
dependencies = [
    "beautifulsoup4==4.13.4",
    "crawl4ai==0.8.0",
    "fastapi[standard]==0.115.12",
    "python-dotenv==1.0.1",
    "uvicorn==0.34.2",
]

[tool.basedpyright]
reportMissingTypeStubs = false
reportCallInDefaultInitializer = false
